--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 <div class="section1">
-    <img src="./assets/undraw_add_color_19gv.svg" alt="">
+    <img src="undraw_add_color_19gv.svg" alt="">
 </div>
 <div class="section1botton">
     <h1>VI<span class="color">PM</span>EN</h1>
@@ -37,37 +37,37 @@
 <h3>Married<span>Photo</span>Collection</h3>
 <div class="product">
     <div class="productbox">
-        <img src="./assets/tanu.jpg" alt="">
+        <img src="tanu.jpg" alt="">
         <p>VIP Men Tanu Sell</p>
         <a href="">$23.3</a>
         <a href="" class="buybtn">Add To Cart</a>
     </div>
     <div class="productbox">
-        <img src="./assets/subhankar.jpg" alt="">
+        <img src="subhankar.jpg" alt="">
         <p>VIP Men Subhankar Sell</p>
         <a href="">$30.3</a>
         <a href="" class="buybtn">Add To Cart</a>
     </div>
     <div class="productbox">
-        <img src="./assets/sukesh.jpg" alt="">
+        <img src="sukesh.jpg" alt="">
         <p>VIP Men Sukesh Sell</p>
         <a href="">$13.3</a>
         <a href="" class="buybtn">Add To Cart</a>
     </div>
     <div class="productbox">
-        <img src="./assets/samir.jpg" alt="">
+        <img src="samir.jpg" alt="">
         <p>VIP Men Samir Sell</p>
         <a href="">$33.3</a>
         <a href="" class="buybtn">Add To Cart</a>
     </div>
     <div class="productbox">
-        <img src="./assets/avi.jpg" alt="">
+        <img src="avi.jpg" alt="">
         <p>VIP Men Avi Sell</p>
         <a href="">$11.3</a>
         <a href="" class="buybtn">Add To Cart</a>
     </div>
     <div class="productbox">
-        <img src="./assets/sujoy.jpg" alt="">
+        <img src="sujoy.jpg" alt="">
         <p>VIP Men Sujoy Sell</p>
         <a href="">$43.3</a>
         <a href="" class="buybtn">Add To Cart</a>
@@ -82,44 +82,44 @@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi laboriosam dolores optio, aliquid voluptate. Dolorum accusamus a nihil quos libero consequatur placeat voluptate, excepturi explicabo nemo dolores voluptatem praesentium!</p>
         </div>
         <div class="aboutbox">
-<img src="./assets/subhas.jpg" alt="">
+<img src="subhas.jpg" alt="">
         </div>
     </section>
     <section class="productsection">
         <h3>Single Pho <span>tos Colle</span>ction</h3>
         <div class="product">
             <div class="productbox">
-                <img src="./assets/suman.jpg" alt="">
+                <img src="suman.jpg" alt="">
                 <p>VIP Men Suman Sell</p>
                 <a href="">$23.3</a>
                 <a href="" class="buybtn">Add To Cart</a>
             </div>
             <div class="productbox">
-                <img src="./assets/Kunal.jpg" alt="">
+                <img src="Kunal.jpg" alt="">
                 <p>VIP Men Kunal Sell</p>
                 <a href="">$30.3</a>
                 <a href="" class="buybtn">Add To Cart</a>
             </div>
             <div class="productbox">
-                <img src="./assets/sanjib.jpg" alt="">
+                <img src="sanjib.jpg" alt="">
                 <p>VIP Men Sanjib Sell</p>
                 <a href="">$13.3</a>
                 <a href="" class="buybtn">Add To Cart</a>
             </div>
             <div class="productbox">
-                <img src="./assets/shuvo.jpg" alt="">
+                <img src="shuvo.jpg" alt="">
                 <p>VIP Men Shuvo Sell</p>
                 <a href="">$33.3</a>
                 <a href="" class="buybtn">Add To Cart</a>
             </div>
             <div class="productbox">
-                <img src="./assets/deba.jpg" alt="">
+                <img src="deba.jpg" alt="">
                 <p>VIP Men Deba Sell</p>
                 <a href="">$11.3</a>
                 <a href="" class="buybtn">Add To Cart</a>
             </div>
             <div class="productbox">
-                <img src="./assets/deep.jpg" alt="">
+                <img src="deep.jpg" alt="">
                 <p>VIP Men Deep Sell</p>
                 <a href="">$43.3</a>
                 <a href="" class="buybtn">Add To Cart</a>
